# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: test_coverage.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_users.json
task_manager/labels/: forms.py  models.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_created_at.py  0003_task_labels.py
task_manager/tasks/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/templates/: base.html  footer.html  index.html  navbar.html
task_manager/templates/labels/: label_list.html
task_manager/templates/statuses/: delete.html  status_list.html  statuses.html
task_manager/templates/tasks/: show.html  task_detail.html  task_list.html  tasks.html
task_manager/templates/users/: new.html  users.html
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0002_user_created_at_alter_user_first_name_and_more.py  0003_rename_user_customuser.py  0004_rename_customuser_user.py
(+5 files in other folders)
