[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ulyana Krasilnikova <b-lack-u@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
flake8 = "^7.1.1"
django = "5.1.1"
dj-database-url = "^2.2.0"
load-dotenv = "^0.1.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
